feat: добавил цель бронирования, buildings
